refactor: 식재료 태그 시 Name으로 request, response하도록 변경